...
		<>
			<KeyboardAvoidingView style={{ flex: 1 }} behavior={Platform.select({ ios: "padding" })}>
				<ScrollView style={styles.container} contentContainerStyle={{ flexGrow: 1 }}>
					<View style={styles.contentContainer}>
						<Image style={styles.logo} source={require("../assets/logo.png")} />
						<TextInput
							testID="username"
							style={styles.usernameTextInput}
							placeholder="Username"
							placeholderTextColor="#ffffffc0"
							value={username}
							onChangeText={setUserName}
							autoCapitalize="none"
							autoCorrect={false}
						/>
						<TouchableOpacity testID="loginButton" style={styles.button} activeOpacity={0.8} onPress={() => login()}>
							<Text style={styles.buttonTitle}>Sign In</Text>
						</TouchableOpacity>
					</View>
				</ScrollView>
			</KeyboardAvoidingView>
		</>
...
